[package]
name = "ferris_mq"
version = "0.1.0"
authors = ["Lawand Othman <lwnd@pm.me>"]
edition = "2021"
description = "A simple message queue system"
license = "MIT"

[dependencies]
actix = "0.13.5"
anyhow = "1.0.86"
chrono = "0.4.38"
env_logger = "0.11.3"
log = "0.4.22"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4"] }
